<resources>
    <string name="app_name">Events Manager</string>
    <string name="your_events">Sự kiện của bạn</string>
    <string name="less_than_one_min">(Còn ít hơn 1 phút)</string>
    <string name="just_happened">(Vừa diễn ra)</string>
    <string name="remaining_time">(Còn %d %s)</string>
    <string name="passed_time">(%d %s trước)</string>
    <string name="remaining_date_time">(Còn %d ngày %d giờ)</string>
    <string name="passed_date_time">(%d ngày %d giờ trước)</string>
    <string name="label_hour">giờ</string>
    <string name="label_date">ngày</string>
    <string name="label_minute">phút</string>
    <string name="incoming_event">Sự kiện sắp tới</string>
    <string name="start">Bắt đầu</string>
    <string name="end">Kết thúc</string>
    <string name="title">Tiêu đề</string>
    <string name="location">Địa điểm</string>
    <string name="no_title">không có tiêu đề</string>
    <string name="refresh">Làm mới danh sách</string>
    <string name="start_time">Bắt đầu:</string>
    <string name="end_time">Kết thúc:</string>
    <string name="no_location">không có địa điểm</string>
    <string name="no_desc">không có mô tả</string>
    <string name="event_created">Đã tạo sự kiện</string>
    <string name="event_edited">Chỉnh sửa thành công</string>
    <string name="delete_event_title">Xóa sự kiện</string>
    <string name="delete_event_desc">Bạn có chắc chắn muốn xóa sự kiện đã chọn ?</string>
    <string name="delete_events_title">Xóa các sự kiện</string>
    <string name="delete_events_desc">Bạn có chắc chắn muốn xóa các sự kiện đã chọn ?</string>
    <string name="event_deleted">Đã xóa sự kiện</string>
    <string name="events_deleted">Đã xóa các sự kiện</string>
    <string name="from">Từ:</string>
    <string name="to">Đến:</string>
    <string name="cancel">Hủy</string>
    <string name="confirm">Xác nhận</string>
    <string name="selected">Đã chọn</string>
    <string name="cannot_perform_action">Không thể chọn xóa sự kiện này</string>
    <string name="start_time_can_not_exceed_end_time">Thời gian bắt đầu không được sau thời gian kết thúc</string>
    <string name="repeat_daily">Lặp lại hằng ngày</string>
</resources>
